# petfit

./: .Rbuildignore  .gitignore  CLAUDE.md  DESCRIPTION  NAMESPACE  README.md
.github/workflows/: integration-tests.yml
R/: blood_utils.R  docker_functions.R  launch_apps.R  modelling_plasma_app.R  modelling_ref_app.R  pipeline_core.R  region_definition_app.R  region_utils.R  report_generation.R  report_utils.R  subsetting_utils.R  utils-pipe.R  validation.R
apptainer/: README.md  petfit.def
docker/: Dockerfile  build_and_push.sh  run_petfit.R
docs/: README.md  api.md  changes.md  contributing.md  index.md  installation.md  models.md  quickstart.md  troubleshooting.md
docs/containers/: apptainer.md  docker.md  index.md
docs/usage/: modelling-reference.md
inst/rmd/: 1tcm_report.Rmd  2tcm_report.Rmd  2tcmirr_report.Rmd  data_definition_report.Rmd  delay_report.Rmd  logan_report.Rmd  ma1_report.Rmd  mrtm1_report.Rmd  mrtm2_report.Rmd  patlak_report.Rmd  reference_tac_report.Rmd  reflogan_report.Rmd  srtm2_report.Rmd  srtm_report.Rmd  suvr_report.Rmd  tstar_finder_report.Rmd  weights_report.Rmd
man/: petfit_interactive.Rd
tests/: README.md
tests/testthat/: helper-integration.R  test-blood_utils.R  test-integration-apptainer.R  test-integration-parallel-apptainer.R  test-region_utils.R  test-report_generation.R  test-report_utils.R
wrapper/: README.md  pyproject.toml  setup.py
wrapper/petfit_docker/: __init__.py  __main__.py  _version.py  cli.py
wrapper/tests/: test_cli.py
