[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "petfit-docker"
version = "0.1.4"
description = "A wrapper for generating Docker commands using regular PETFit syntax"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "The PETFit developers" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[project.scripts]
petfit-docker = "petfit_docker.cli:main"

[tool.setuptools.packages.find]
include = ["petfit_docker*"]
